# gpu-price-scraper

./: .gitignore  README.md  pricing_dashboard.html  pyproject.toml  requirements.txt
.github/workflows/: scrape-daily.yml
dashboard/: app.py
data/: pricing_history.db
docs/: data.json  index.html
gpu_scraper/: __init__.py  analytics.py  cli.py  display.py  exporter.py  models.py  normalizer.py  storage.py
gpu_scraper/providers/: __init__.py  aws.py  azure.py  base.py  coreweave.py  crusoe.py  datacrunch.py  gcp.py  hyperstack.py  lambda_labs.py  nebius.py  oci.py  paperspace.py  runpod.py  tensordock.py  vast_ai.py
scripts/: generate_dashboard.py
tests/: test_availability_tiers.py  test_price_normalization.py
