[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-price-scraper"
version = "0.2.0"
description = "Production GPU cloud pricing scraper with arbitrage analytics and Streamlit dashboard"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    # analytics + dashboard
    "pandas>=2.1.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
]

[project.scripts]
gpu-scraper = "gpu_scraper.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["gpu_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
